spacing fixes

--- a/src/components/modules/KeyRacesModule.module.css
+++ b/src/components/modules/KeyRacesModule.module.css
@@ -1,12 +1,10 @@
 
 .keyRaces {
-    padding: 1px;
+    max-width: 70%;
   }
   
   .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 250px); 
-    gap: 2px;
+    display: flex;
     flex-wrap: wrap;
     
   }
@@ -14,10 +12,12 @@
   .race {
     display: flex;
     align-items: center;
+    margin-right: 1.3rem;
   }
   
   .race p {
-    margin-left: 10px;
+    margin-left: 5px;
+    font-size: 13px;
   }
   @media screen and (max-width: 1280px) {
     .grid {
@@ -25,13 +25,22 @@
     }
   }
   @media screen and (max-width: 768px) {
+    .keyRaces{
+      max-width:90%;
+    }
+    .race p {
+      font-size: 12px;
+    }
     .grid {
       grid-template-columns: repeat(2, 1fr); 
     }
   }
   
   /* For Galaxy Fold */
-  @media screen and (max-width: 280px) and (max-height: 653px) {
+  @media screen and (max-width: 370px){
+    .keyRaces{
+      max-width: 100%;
+    }
     .grid {
       grid-template-columns: repeat(1, 1fr); 
     }
